# traffic-pcb-sb

./: .gitmodules  Jenkinsfile  README.md  led_locations.xlsx
software/esp-firmware/components/TomTom/: .gitignore  CMakeLists.txt  Kconfig.projbuild  api_config.h  led_locations.h  secretsTemplate.h  secrets_template.h  tomtom.c  tomtom.h
software/esp-firmware/components/TomTom/test/: CMakeLists.txt  test_tomtom.c  test_tomtom_data.h
software/esp-firmware/components/actions/: CMakeLists.txt  KConfig.projbuild  Kconfig.projbuild
software/esp-firmware/components/actions/include/: action_task.h  actions.h  actions_pi.h
software/esp-firmware/components/actions/src/: action_task.c  actions.c
software/esp-firmware/components/actions/test/: CMakeLists.txt  KConfig.projbuild  sdkconfig.test_actions  sdkconfig.test_actions1  sdkconfig.test_actions2  test_action_queryOTA.c  test_actions_main.c  test_actions_main2.c
software/esp-firmware/components/animations/: CMakeLists.txt  KConfig.projbuild  Kconfig.projbuild
software/esp-firmware/components/animations/include/: V1_0_led_coordinates.h  V2_0_led_coordinates.h  animation_config.h  animation_types.h  animations.h  animations_pi.h  led_coordinates.h  strobe.h  strobe_task.h  strobe_types.h
software/esp-firmware/components/animations/src/: V1_0_led_coordinates.c  V2_0_led_coordinates.c  animations.c  strobe.c  strobe_task.c
software/esp-firmware/components/animations/test/: CMakeLists.txt  test_orderLEDs.c  test_signedDistanceFromDiagLine.c
software/esp-firmware/components/api_connect/: CMakeLists.txt  CMockConfig.yml  Kconfig.projbuild
software/esp-firmware/components/api_connect/include/: api_connect.h  api_connect_config.h  api_connect_pi.h  wifi.h
software/esp-firmware/components/api_connect/mocks/: Mockapi_connect.c  Mockapi_connect.h
software/esp-firmware/components/api_connect/src/: api_connect.c  wifi.c
software/esp-firmware/components/api_connect/test/: CMakeLists.txt  Kconfig.projbuild  test_api_connect.c  test_getNextResponseBlock.c  test_getServerSpeedsWithAddendums.c  test_nextCSVEntryFromMark.c  test_openServerFile.c  test_readServerSpeedDataPreinit.c
software/esp-firmware/components/app_nvs/: CMakeLists.txt  Kconfig.projbuild
software/esp-firmware/components/app_nvs/include/: app_nvs.h
software/esp-firmware/components/app_nvs/mocks/: Mockapp_nvs.c  Mockapp_nvs.h
software/esp-firmware/components/app_nvs/src/: app_nvs.c
software/esp-firmware/components/circular_buffer/: CMakeLists.txt
software/esp-firmware/components/circular_buffer/include/: circular_buffer.h  circular_buffer_pi.h
software/esp-firmware/components/circular_buffer/src/: circular_buffer.c
software/esp-firmware/components/circular_buffer/test/: CMakeLists.txt  test_circBufStoreFromClient.c  test_circular_buffer.c
software/esp-firmware/components/common/: CMakeLists.txt  CMockConfig.yml  Kconfig.projbuild
software/esp-firmware/components/common/include/: V1_0_pinout.h  V2_0_pinout.h  circular_buffer.h  circular_buffer_pi.h  http_wrap.h  main_types.h  pinout.h  utilities.h
software/esp-firmware/components/common/mocks/: Mockhttp_wrap.c  Mockhttp_wrap.h
software/esp-firmware/components/common/src/: circular_buffer.c  extern_utilities.c  http_wrap.c
software/esp-firmware/components/common/test/: CMakeLists.txt  test_circular_buffer.c  test_pinout.c
software/esp-firmware/components/indicators/: CMakeLists.txt  CMockConfig.yml  KConfig.projbuild  Kconfig.projbuild
software/esp-firmware/components/indicators/include/: indicators.h  indicators_config.h
software/esp-firmware/components/indicators/mock/: README.md
software/esp-firmware/components/indicators/mocks/: Mockindicators.c  Mockindicators.h
software/esp-firmware/components/indicators/src/: extern_indicators_config.c  indicators.c
software/esp-firmware/components/led_matrix/: CMakeLists.txt  Kconfig.projbuild
software/esp-firmware/components/led_matrix/include/: V1_0_led_registers.h  V2_0_led_registers.h  dots_commands.h  dots_commands_pi.h  dots_matrix.h  dots_types.h  led_matrix.h  led_registers.h  led_types.h  mat_err.h
software/esp-firmware/components/led_matrix/src/: V1_0_led_matrix.c  V1_0_led_registers.c  V2_0_led_matrix.c  V2_0_led_registers.c  dots_commands.c  dots_matrix.c  led_matrix.c
software/esp-firmware/components/led_matrix/test/: CMakeLists.txt  test_dots_commands.c
software/esp-firmware/components/ota/: CMakeLists.txt  CMockConfig.yml  KConfig.projbuild  Kconfig.projbuild
software/esp-firmware/components/ota/include/: ota.h  ota_config.h  ota_pi.h  ota_types.h
software/esp-firmware/components/ota/mocks/: Mockota.c  Mockota.h
software/esp-firmware/components/ota/src/: extern_ota_config.c  ota.c
software/esp-firmware/components/ota/test/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.test_ota  test_compareVersions.c  test_createOTATask.c  test_ota_main.c  test_processOTAAvailableFile.c  test_versionFromKey.c
software/esp-firmware/components/refresh/: CMakeLists.txt  KConfig.projbuild  Kconfig.projbuild
software/esp-firmware/components/refresh/include/: refresh.h  refresh_config.h  traffic_data.h
software/esp-firmware/components/refresh/mocks/: Mockrefresh.c  Mockrefresh.h  Mocktraffic_data.c  Mocktraffic_data.h
software/esp-firmware/components/refresh/src/: extern_refresh_config.c  refresh.c  traffic_data.c
software/esp-firmware/components/routines/: CMakeLists.txt
software/esp-firmware/main/: CMakeLists.txt  Kconfig.projbuild  led_locations.c  led_locations.h  led_locations_arrs.h  main.c  main_types.h  pinout.h  routines.c  routines.h  tasks.c  tasks.h  utilities.c  utilities.h  wifi.c  wifi.h  worker.c  worker.h
software/esp-firmware/main/include/: initialize.h  main_types.h  nvs_settings.h  refresh.h  routines.h  tasks.h  utilities.h  wifi.h
software/esp-firmware/main/src/: indicators.c  initialize.c  main.c  nvs_settings.c  refresh.c  routines.c  tasks.c  utilities.c  wifi.c
software/esp-firmware/main/src/tests/: test_ota_main.c  (+2 more)
software/esp-manual-tests/main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+320 files in other folders)
